package mobilefactory.outSourcing;

import mobilefactory.mobileComponent.OSSoftware;

public class AppStore extends OSSoftware {
    @Override
    public void run() {

    }
}
