package mobilefactory.outSourcing;

import mobilefactory.mobileComponent.OSSoftware;

public class TelephoneCallSoftware extends OSSoftware {
    @Override
    public void run() {

    }
}
