@startuml

title __OUTSOURCING's Class Diagram__\n

  namespace mobilefactory {
    namespace outSourcing {
      class mobilefactory.outSourcing.AppStore {
          + run()
      }
    }
  }
  

  namespace mobilefactory {
    namespace outSourcing {
      class mobilefactory.outSourcing.KakaoSoftware {
          + run()
      }
    }
  }
  

  namespace mobilefactory {
    namespace outSourcing {
      class mobilefactory.outSourcing.MemoSoftware {
          + run()
      }
    }
  }
  

  namespace mobilefactory {
    namespace outSourcing {
      class mobilefactory.outSourcing.MessageSoftware {
          + run()
      }
    }
  }
  

  namespace mobilefactory {
    namespace outSourcing {
      class mobilefactory.outSourcing.PlayStore {
          + run()
      }
    }
  }
  

  namespace mobilefactory {
    namespace outSourcing {
      class mobilefactory.outSourcing.TelephoneCallSoftware {
          + run()
      }
    }
  }
  

  mobilefactory.outSourcing.AppStore -up-|> mobilefactory.mobileComponent.OSSoftware
  mobilefactory.outSourcing.KakaoSoftware -up-|> mobilefactory.mobileComponent.OSSoftware
  mobilefactory.outSourcing.MemoSoftware -up-|> mobilefactory.mobileComponent.OSSoftware
  mobilefactory.outSourcing.MessageSoftware -up-|> mobilefactory.mobileComponent.OSSoftware
  mobilefactory.outSourcing.PlayStore -up-|> mobilefactory.mobileComponent.OSSoftware
  mobilefactory.outSourcing.TelephoneCallSoftware -up-|> mobilefactory.mobileComponent.OSSoftware


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
